@@ -170,6 +170,7 @@
 					<select id="homepage_tab_selection">
 						<option value="remember">Remember Previous</option>
 						<option value="tab_newreleases_content_trigger">Popular New Releases</option>
+						<option value="es_allreleases">All New Releases</option>
 						<option value="tab_topsellers_content_trigger">Top Sellers</option>
 						<option value="tab_upcoming_content_trigger">Upcoming</option>
 						<option value="tab_specials_content_trigger">Specials</option>
